--- a/index.html
+++ b/index.html
@@ -13,42 +13,62 @@
     />
   </head>
   <body>
-    <div class="container">
-      <div class="calculator">
-        <input
-          type="text"
-          id="result-display"
-          readonly
-        />
+    <div class="calculator">
+      <input
+        type="text"
+        class="display"
+        id="display"
+        disabled
+      />
+      <div class="buttons">
+        <button onclick="append('7')">7</button>
+        <button onclick="append('8')">8</button>
+        <button onclick="append('9')">9</button>
+        <button
+          class="operator"
+          onclick="append('/')"
+        >
+          ÷
+        </button>
 
-        <div class="buttons">
-          <button data-value="7">7</button>
-          <button data-value="8">8</button>
-          <button data-value="9">9</button>
-          <button data-value="/">÷</button>
+        <button onclick="append('4')">4</button>
+        <button onclick="append('5')">5</button>
+        <button onclick="append('6')">6</button>
+        <button onclick="append('*')">×</button>
 
-          <button data-value="4">4</button>
-          <button data-value="5">5</button>
-          <button data-value="6">6</button>
-          <button data-value="*">×</button>
+        <button onclick="append('1')">1</button>
+        <button onclick="append('2')">2</button>
+        <button onclick="append('3')">3</button>
+        <button
+          class="operator"
+          onclick="append('-')"
+        >
+          −
+        </button>
 
-          <button data-value="1">1</button>
-          <button data-value="2">2</button>
-          <button data-value="3">3</button>
-          <button data-value="-">−</button>
+        <button onclick="append('0')">0</button>
+        <button onclick="append('.')">.</button>
+        <button
+          class="clear"
+          onclick="clearDisplay()"
+        >
+          C
+        </button>
 
-          <button data-value="0">0</button>
-          <button data-value=".">.</button>
-          <button id="clear">C</button>
-          <button data-value="+">+</button>
+        <button
+          class="operator"
+          onclick="append('+')"
+        >
+          +
+        </button>
 
-          <button
-            id="equals"
-            class="equal-button"
-          >
-            =
-          </button>
-        </div>
+        <button
+          class="equal"
+          style="grid-column: span 4"
+          onclick="calculate()"
+        >
+          =
+        </button>
       </div>
     </div>
 
